--- a/src/index.css
+++ b/src/index.css
@@ -351,9 +351,12 @@ nav ul li a.active {
 .main{
   background: url(./Images/me.webp);
   background-size: cover;
-  width: 100%;
-  height: 100vh;
+  /* width: 100%;
+  aspect-ratio: 1; */
   background-attachment: fixed;
+  margin-top: 1.5rem;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 .main h3{
   font-size: 4.4rem;
