--- a/src/index.css
+++ b/src/index.css
@@ -314,7 +314,7 @@ nav ul li a.active {
   }
 
   .main{
-    height:auto;
+    height:50vh;
   }
   .ham-menu {
     display: block; /* Show hamburger button */
